    - Fixed Sonic Repulsor Fields being able to be attacked and destroyed
  Changes:
    - Tiberium mining, acceleration, and containment structures can now be built in space when using the Space Exploration mod
    - Changed default Blue Tiberium appearance timing when Space Exploration is active to account for slow evolution factor growth
  Features:
    - Added compatibility for P.U.M.P. (Thanks to Ferlonas and Xcone for the pull request)
---------------------------------------------------------------------------------------------------
Version: 1.1.28
  Bugfixes:
    - Fixed crash that occurred when trying to damage entity that died on the same tick (control.lua:1356: in function 'safeDamage')
    - Fixed /tibRebuildLists command causing Sonic Emitters to stop working
    - Fixed new chunks spawning with way too much Tiberium when using tibPerformanceMultiplier or Tiberium Growth Optimization setting
    - Fixed various typos in English and Russian descriptions (Thanks to CV514 for the pull request)
    - Fixed issue where the spread of Blue Tiberium did not slow down after reaching saturation on the Nauvis surface
    - Fixed some Tiberium growth settings taking up to 5 minutes to take effect after restarting
  Changes:
    - Signficantly reduced the default for the Blue Tiberium saturation point setting, so you are less likely to see fields turning nearly fully blue
---------------------------------------------------------------------------------------------------
Version: 1.1.27
  Bugfixes:
    - Fixed crash that occurred when players died
    - Added missing description for Obelisk of Light damage modifiers
  Features:
    - Added a setting for modifying how early Blue Tiberium can appear in the world
    - Added a setting for scaling how much pollution is produced by Tiberium-related recipes
---------------------------------------------------------------------------------------------------
Version: 1.1.26
  Bugfixes: