@@ -132,6 +132,7 @@ tiberium-obelisk-of-light=A massively powerful Brotherhood of Nod laser weapon t
 tiberium-ore-processing=Tiberium Ore Processing
 tiberium-molten-processing=Molten Tiberium Processing
 tiberium-liquid-processing=Liquid Tiberium Processing
+tiberium-liquid-processing-hot=Accelerated Liquid Tiberium Processing
 tiberium-advanced-molten-processing=The Cooler Molten Tiberium Processing
 tiberium-ore-processing-blue=Blue Tiberium Ore Processing
 tiberium-liquid-processing-blue=Blue Tiberium Refining
